fix spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,7 @@ h4 {
 
 ul {
   padding-left: 0.2in;
-  margin-bottom: 0.2in;
+  margin-bottom: 0.15in;
 }
 
 li {
